--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port= 8082
 #debit.service.uri=http://localhost:8084/debit/a
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=https://eureka-git-parabsiddhesh-dev.apps.sandbox-m3.1530.p1.openshiftapps.com/eureka
 spring.application.name=customer-service
 
 spring.zipkin.enabled=true
